--- a/index.html
+++ b/index.html
@@ -4,19 +4,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Employee Tracker</title>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-    <!-- Firebase References -->
-    <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-database.js"></script>
-
-    <!-- Moment.js Reference -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <title>Train Time Homework</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+<link rel="stylesheet" href="assets/styles/styles.css" class="css">
 
     <style>
         #train-table th,
@@ -36,7 +26,7 @@
                 Train Time!!
             </h1>
             <h3 class="text-center">
-               All 'Dem Trains!'
+                All 'Dem Trains!'
             </h3>
         </div>
 
@@ -73,16 +63,17 @@
                         <form>
                             <div class="form-group">
                                 <label for="train-name-input">Train Name</label>
-                                <input class="form-control" id="train-name-input" placeholder="Thorin"
-                                    type="text" />
+                                <input class="form-control" id="train-name-input" placeholder="Thorin" type="text" />
                             </div>
                             <div class="form-group">
                                 <label for="destination-input">Destination</label>
-                                <input class="form-control" id="role-input" placeholder="Mount Doom" type="text" />
+                                <input class="form-control" id="destination-input" placeholder="Mount Doom"
+                                    type="text" />
                             </div>
                             <div class="form-group">
                                 <label for="first-train-time-input">First Train Time (HH:mm - military time)</label>
-                                <input class="form-control" id="first-train-time-input" placeholder="06:00" type="text" />
+                                <input class="form-control" id="first-train-time-input" placeholder="06:00"
+                                    type="text" />
                             </div>
                             <div class="form-group">
                                 <label for="frequency-input">Frequency (min)</label>
@@ -98,8 +89,20 @@
         </div>
     </div>
 
-    <!-- JavaScript -->
-    <script src="train.js"></script>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <!-- Firebase References -->
+    <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-database.js"></script>
+
+    <!-- Moment.js Reference -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <!-- train.js Reference -->
+    <script src="assets/javascript/train.js"></script>
 </body>
 
 </html>
