got the firebase to connect and retrieve info at least

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                     <div class="card-body">
                         <table class="table table-sm table-hover" id="employee-table">
                             <thead>
-                                <tr>
+                                <tr >
                                     <th scope="col">Train Name</th>
                                     <th scope="col">Destination</th>
                                     <th scope="col">Frequency</th>
-                                    <th scope="col">Next Arrival ($)</th>
-                                    <th scope="col">Minutes Away ($)</th>
+                                    <th scope="col">Next Arrival (HH: mm)</th>
+                                    <th scope="col">Minutes Away (mm)</th>
                                 </tr>
                             </thead>
-                            <tbody></tbody>
+                            <tbody id="x"></tbody>
                         </table>
                     </div>
                 </div>
