--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="form-group">
                                 <label for="first-train-time-input">First Train Time (HH:mm - military time)</label>
                                 <input class="form-control" id="first-train-time-input" placeholder="06:00"
-                                    type="text" />
+                                    type="time" />
                             </div>
                             <div class="form-group">
                                 <label for="frequency-input">Frequency (min)</label>
